--- a/1502/05_rails_mini_project.yml
+++ b/1502/05_rails_mini_project.yml
@@ -36,8 +36,8 @@ submissions:
     repository: https://github.com/tessgriffin/point_box
     notes: ""
   Thomas Leskin:
-    repository:
-    notes:
+    repository: https://github.com/tleskin/pointbox
+    notes: http://stark-plains-2326.herokuapp.com/
   Tracy Caruso:
     repository:
     notes:
