--- a/1502/05_rails_mini_project.yml
+++ b/1502/05_rails_mini_project.yml
@@ -12,7 +12,7 @@ submissions:
     repository:
     notes: ""
   Kenny Chen:
-    repository:
+    repository: https://github.com/boomkenster/ideabox
     notes: ""
   Kristina Brown:
     repository: https://github.com/kristinabrown/point-box
