--- a/1502/05_rails_mini_project.yml
+++ b/1502/05_rails_mini_project.yml
@@ -21,7 +21,7 @@ submissions:
     repository: https://github.com/kylehenson/idea_box
     notes: "Tried out minitest....wrong idea"
   Michelle Golle:
-    repository:
+    repository: https://github.com/MichelleGolle/ideabox
     notes: ""
   Mihir Parikh:
     repository:
