--- a/1502/04_authentication_rails.yml
+++ b/1502/04_authentication_rails.yml
@@ -24,7 +24,7 @@ submissions:
     repository: https://github.com/MichelleGolle/my-jams
     notes: ""
   Mihir Parikh:
-    repository:
+    repository: https://github.com/mihir787/my_jams
     notes: ""
   Minnie Lee:
     repository: https://github.com/MLee21/my-jams-rails
