Derp, add Herbet and Alex's SalesEngine comments 😇

--- a/1409/03_sales_engine/sales_engine_submissions.yml
+++ b/1409/03_sales_engine/sales_engine_submissions.yml
@@ -41,27 +41,27 @@ Adam Smith & Alex Jensen & Herbert Joseph:
     repository: 
     setup_notes: ""
     instructor_evaluation:
-      notes: ""
+      notes: "Great use of enumerable methods. The team had a unique take on how to structure their SalesEngine. Some use of metaprogramming."
       rubric:
-        Functional Expectations: 
-        Test-Driven Development: 
-        Encapsulation / Components:
-        Fundamental Ruby & Style: 
-        Enumerable & Collections:
-        Code Sanitation:
+        Functional Expectations: 3
+        Test-Driven Development: 4
+        Encapsulation / Components: 4
+        Fundamental Ruby & Style: 4
+        Enumerable & Collections: 4
+        Code Sanitation: 4
 
 Chase van Hekken & Christopher Bynum:
     repository: 
     setup_notes: ""
     instructor_evaluation:
-      notes: ""
+      notes: "100% test coverage."
       rubric:
-        Functional Expectations: 
-        Test-Driven Development: 
-        Encapsulation / Components:
-        Fundamental Ruby & Style: 
-        Enumerable & Collections:
-        Code Sanitation:
+        Functional Expectations: 4
+        Test-Driven Development: 3.5
+        Encapsulation / Components: 4
+        Fundamental Ruby & Style: 3
+        Enumerable & Collections: 3
+        Code Sanitation: 4
 
 Danny Glunz & Victoria Harrod:
     repository: 
@@ -69,12 +69,12 @@ Danny Glunz & Victoria Harrod:
     instructor_evaluation:
       notes: ""
       rubric:
-        Functional Expectations: 
-        Test-Driven Development: 
-        Encapsulation / Components:
-        Fundamental Ruby & Style: 
-        Enumerable & Collections:
-        Code Sanitation:
+        Functional Expectations: 4
+        Test-Driven Development: 4
+        Encapsulation / Components: 3
+        Fundamental Ruby & Style: 3
+        Enumerable & Collections: 4
+        Code Sanitation: 4
 
  Kalah Cheek & Konr Josef Larson:
     repository: 
@@ -82,12 +82,12 @@ Danny Glunz & Victoria Harrod:
     instructor_evaluation:
       notes: ""
       rubric:
-        Functional Expectations: 
-        Test-Driven Development: 
-        Encapsulation / Components:
-        Fundamental Ruby & Style: 
-        Enumerable & Collections:
-        Code Sanitation:
+        Functional Expectations: 2
+        Test-Driven Development: 2
+        Encapsulation / Components: 2
+        Fundamental Ruby & Style: 2
+        Enumerable & Collections: 3
+        Code Sanitation: 4
 
 Kate Lane & Timothy Mee:
     repository: 
@@ -95,10 +95,10 @@ Kate Lane & Timothy Mee:
     instructor_evaluation:
       notes: ""
       rubric:
-        Functional Expectations: 
-        Test-Driven Development: 
-        Encapsulation / Components:
-        Fundamental Ruby & Style: 
-        Enumerable & Collections:
-        Code Sanitation:
+        Functional Expectations: 3
+        Test-Driven Development: 3
+        Encapsulation / Components: 3
+        Fundamental Ruby & Style: 3
+        Enumerable & Collections: 3
+        Code Sanitation: 4
 
