Add Josh Cheek's 1502 Dinner Dash takeaways

--- a/1502/06_dinner_dash.yml
+++ b/1502/06_dinner_dash.yml
@@ -20,6 +20,7 @@ Eric, Kyle, Tess:
 
 Dave, Kristina, Minnie, Tracy:
   Repo: https://github.com/kristinabrown/dinner-dash.git
+  Takeaways from the review: https://gist.github.com/JoshCheek/b62eff04b99669b107f7
   Feature Completeness:
     * Score: 4
     * Extensions: Stripe, AWS integration for avatars
@@ -64,6 +65,7 @@ Dave, Kristina, Minnie, Tracy:
 
 Jack, Michelle, Patrick:
   Repo: https://github.com/patrickmedaugh/dinner_dash
+  Takeaways from the review: https://gist.github.com/JoshCheek/27fd45795c1ce31b71d8
   Feature Completeness:
     * Score: 3.5
     * Order stuff logged out
