Added repo link for Michael Merrill

--- a/1503/module_2_prep/webguesser.yml
+++ b/1503/module_2_prep/webguesser.yml
@@ -48,8 +48,8 @@ submissions:
     repo: ""
     notes: ""
   Michael Merrill:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/michaelkm/web_guesser"
+    notes: "I'm skipping a show at Red Rocks because I'd rather code... what is wrong with me? Is this what you wanted in 'notes'?"
   Rob Cornell:
     repo: ""
     notes: ""
