Michael Merrill personal website repo added

--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -48,8 +48,8 @@ submissions:
     repo: ""
     notes: ""
   Michael Merrill:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/michaelkm/personal_site"
+    notes: "It's snowing... Why is it snowing??? It's May!"
   Rob Cornell:
     repo: ""
     notes: ""
