--- a/1503/module_2_prep/webguesser.yml
+++ b/1503/module_2_prep/webguesser.yml
@@ -18,7 +18,7 @@ submissions:
     repo: ""
     notes: ""
   Morgan Miller:
-    repo: ""
+    repo: "https://github.com/morganmiller/web_guesser"
     notes: ""
   Justin Holmes:
     repo: ""
