Add repo link for Erik Butcher

--- a/1503/module_2_prep/webguesser.yml
+++ b/1503/module_2_prep/webguesser.yml
@@ -36,8 +36,8 @@ submissions:
     repo: ""
     notes: ""
   Erik Butcher:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/with-a-k/webguesser"
+    notes: "Accidentally did all the extensions without realizing they were extensions in the first place."
   Margarett Ly:
     repo: ""
     notes: ""
