--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -62,3 +62,6 @@ submissions:
   Tyler Graham:
     repo: ""
     notes: ""
+Jamie Kawahara:
+    repo: "https://github.com/androidgrl/appstarter"
+    notes: "Appstarter website"
