--- a/1503/module_2_prep/webguesser.yml
+++ b/1503/module_2_prep/webguesser.yml
@@ -42,7 +42,7 @@ submissions:
     repo: ""
     notes: ""
   Chelsea Worrel:
-    repo: ""
+    repo: https://github.com/chelseaworrel/web_guesser
     notes: ""
   Dmitry Vizersky:
     repo: ""
