--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -3,7 +3,7 @@ submissions:
     repo: ""
     notes: ""
   Max Tedford:
-    repo: ""
+    repo: "https://github.com/maxtedford/personal_website"
     notes: ""
   Rick Bacci:
     repo: ""
