--- a/1503/module_2_prep/webguesser.yml
+++ b/1503/module_2_prep/webguesser.yml
@@ -9,7 +9,7 @@ submissions:
     repo: ""
     notes: ""
   Sally MacNicholas:
-    repo: ""
+    repo: "https://github.com/sallymacnicholas/web_guesser"
     notes: ""
   Vanessa Gomez:
     repo: ""
