--- a/1503/module_2_prep/webguesser.yml
+++ b/1503/module_2_prep/webguesser.yml
@@ -39,7 +39,7 @@ submissions:
     repo: "https://github.com/with-a-k/webguesser"
     notes: "Accidentally did all the extensions without realizing they were extensions in the first place."
   Margarett Ly:
-    repo: ""
+    repo: "https://github.com/aoili/web_guesser"
     notes: ""
   Chelsea Worrel:
     repo: https://github.com/chelseaworrel/web_guesser
