--- a/1503/module_2_prep/webguesser.yml
+++ b/1503/module_2_prep/webguesser.yml
@@ -45,7 +45,7 @@ submissions:
     repo: https://github.com/chelseaworrel/web_guesser
     notes: ""
   Dmitry Vizersky:
-    repo: ""
+    repo: "https://github.com/Dmitry1007/web_guesser"
     notes: ""
   Michael Merrill:
     repo: "https://github.com/michaelkm/web_guesser"
