--- a/1503/module_2_prep/webguesser.yml
+++ b/1503/module_2_prep/webguesser.yml
@@ -12,7 +12,7 @@ submissions:
     repo: "https://github.com/sallymacnicholas/web_guesser"
     notes: ""
   Vanessa Gomez:
-    repo: ""
+    repo: "https://github.com/vanegomez/web-guesser"
     notes: ""
   Andrew Fink:
     repo: ""
