--- a/1503/module_2_prep/webguesser.yml
+++ b/1503/module_2_prep/webguesser.yml
@@ -24,8 +24,8 @@ submissions:
     repo: ""
     notes: ""
   Drew Reynolds:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/NYDrewReynolds/web_guesser"
+    notes: "Got a little carried away with styling."
   Josh Cass:
     repo: ""
     notes: ""
