--- a/1503/module_2_prep/task_manager.yml
+++ b/1503/module_2_prep/task_manager.yml
@@ -3,7 +3,7 @@ submissions:
     repo: ""
     notes: ""
   Max Tedford:
-    repo: ""
+    repo: "https://github.com/maxtedford/task_manager"
     notes: ""
   Rick Bacci:
     repo: ""
