Add repo link for Erik Butcher

--- a/1503/module_2_prep/task_manager.yml
+++ b/1503/module_2_prep/task_manager.yml
@@ -36,7 +36,7 @@ submissions:
     repo: ""
     notes: ""
   Erik Butcher:
-    repo: ""
+    repo: "https://github.com/with-a-k/task-manager"
     notes: ""
   Margarett Ly:
     repo: ""
