Add repo link for Erik Butcher

--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -36,8 +36,8 @@ submissions:
     repo: ""
     notes: ""
   Erik Butcher:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/with-a-k/personal-website"
+    notes: "Still very basic, would like to polish later"
   Margarett Ly:
     repo: ""
     notes: ""
