--- a/1503/module_2_prep/webguesser.yml
+++ b/1503/module_2_prep/webguesser.yml
@@ -33,7 +33,7 @@ submissions:
     repo: ""
     notes: ""
   Whitney Hiemstra:
-    repo: ""
+    repo: "https://github.com/whiemstra/web_guesser"
     notes: ""
   Erik Butcher:
     repo: "https://github.com/with-a-k/webguesser"
