added web_guesser repo

--- a/1503/module_2_prep/webguesser.yml
+++ b/1503/module_2_prep/webguesser.yml
@@ -30,7 +30,7 @@ submissions:
     repo: ""
     notes: ""
   Lev Kravinsky:
-    repo: ""
+    repo: "https://github.com/kravinskylev/web_guesser"
     notes: ""
   Whitney Hiemstra:
     repo: "https://github.com/whiemstra/web_guesser"
