--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -1,7 +1,7 @@
 submissions:
   Brett Grigsby:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/brettgrigsby/personal_website"
+    notes: "link: https://googledrive.com/host/0BzCURsCTNo_FaGpPN2FHTGtsRGc/"
   Max Tedford:
     repo: "https://github.com/maxtedford/personal_website"
     notes: ""
