--- a/1503/module_2_prep/webguesser.yml
+++ b/1503/module_2_prep/webguesser.yml
@@ -6,7 +6,7 @@ submissions:
     repo: "https://github.com/maxtedford/web_guesser"
     notes: ""
   Rick Bacci:
-    repo: ""
+    repo: "https://github.com/RickBacci/web_guesser"
     notes: ""
   Sally MacNicholas:
     repo: "https://github.com/sallymacnicholas/web_guesser"
