--- a/1503/module_2_prep/webguesser.yml
+++ b/1503/module_2_prep/webguesser.yml
@@ -27,7 +27,7 @@ submissions:
     repo: "https://github.com/NYDrewReynolds/web_guesser"
     notes: "Got a little carried away with styling."
   Josh Cass:
-    repo: ""
+    repo: "https://github.com/joshcass/web_guesser"
     notes: ""
   Lev Kravinsky:
     repo: "https://github.com/kravinskylev/web_guesser"
