--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -51,8 +51,8 @@ submissions:
     repo: "https://github.com/michaelkm/personal_site"
     notes: "It's snowing... Why is it snowing??? It's May!"
   Rob Cornell:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/RMCornell/rcornell_webpage"
+    notes: "WIP"
   Eugene Khanutin:
     repo: ""
     notes: ""
