--- a/1503/module_2_prep/task_manager.yml
+++ b/1503/module_2_prep/task_manager.yml
@@ -51,8 +51,8 @@ submissions:
     repo: ""
     notes: ""
   Rob Cornell:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/RMCornell/task_manager"
+    notes: "WIP"
   Eugene Khanutin:
     repo: ""
     notes: ""
