--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -42,8 +42,8 @@ submissions:
     repo: ""
     notes: ""
   Chelsea Worrel:
-    repo: ""
-    notes: ""
+    repo: https://github.com/chelseaworrel/chelseaworrel.github.io
+    notes: work-in-progress....http://chelseaworrel.github.io/blog/
   Dmitry Vizersky:
     repo: ""
     notes: ""
