--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -24,8 +24,8 @@ submissions:
     repo: ""
     notes: ""
   Drew Reynolds:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/NYDrewReynolds/portfolio"
+    notes: "http://drewreynolds.me/"
   Josh Cass:
     repo: ""
     notes: ""
