--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -18,8 +18,8 @@ submissions:
     repo: ""
     notes: ""
   Morgan Miller:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/morganmiller/personal-website"
+    notes: "Michael stole my sticker quote. I object!"
   Justin Holmes:
     repo: ""
     notes: ""
