--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -43,7 +43,7 @@ submissions:
     notes: ""
   Chelsea Worrel:
     repo: https://github.com/chelseaworrel/chelseaworrel.github.io
-    notes: work-in-progress....http://chelseaworrel.github.io/blog/
+    notes: WIP http://chelseaworrel.github.io
   Dmitry Vizersky:
     repo: ""
     notes: ""
