--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -39,7 +39,7 @@ submissions:
     repo: "https://github.com/with-a-k/personal-website"
     notes: "Still very basic, would like to polish later"
   Margarett Ly:
-    repo: ""
+    repo: "https://github.com/aoili/personal_website"
     notes: ""
   Chelsea Worrel:
     repo: https://github.com/chelseaworrel/chelseaworrel.github.io
