--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -9,8 +9,8 @@ submissions:
     repo: ""
     notes: ""
   Sally MacNicholas:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/sallymacnicholas/personal_site"
+    notes: "my writing needs a bit of work. have fun."
   Vanessa Gomez:
     repo: ""
     notes: ""
