--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -45,8 +45,8 @@ submissions:
     repo: https://github.com/chelseaworrel/chelseaworrel.github.io
     notes: WIP http://chelseaworrel.github.io
   Dmitry Vizersky:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/Dmitry1007/personal-site"
+    notes: "Still chipping away but the bulk is done"
   Michael Merrill:
     repo: "https://github.com/michaelkm/personal_site"
     notes: "It's snowing... Why is it snowing??? It's May!"
