--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -33,8 +33,8 @@ submissions:
     repo: ""
     notes: ""
   Whitney Hiemstra:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/whiemstra/personal_website"
+    notes: "ugh... looking rough. =)"
   Erik Butcher:
     repo: "https://github.com/with-a-k/personal-website"
     notes: "Still very basic, would like to polish later"
