--- a/1503/module_2_prep/task_manager.yml
+++ b/1503/module_2_prep/task_manager.yml
@@ -33,7 +33,7 @@ submissions:
     repo: ""
     notes: ""
   Whitney Hiemstra:
-    repo: ""
+    repo: "https://github.com/whiemstra/task_manager"
     notes: ""
   Erik Butcher:
     repo: "https://github.com/with-a-k/task-manager"
