--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -21,8 +21,8 @@ submissions:
     repo: "https://github.com/morganmiller/personal-website"
     notes: "Michael stole my sticker quote. I object!"
   Justin Holmes:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/Justin-Holmes/personal_website"
+    notes: "https://googledrive.com/host/0BwCh9DoxQHR8bzJPdVlvR1BYaXM"
   Drew Reynolds:
     repo: "https://github.com/NYDrewReynolds/portfolio"
     notes: "http://drewreynolds.me/"
