--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -60,8 +60,8 @@ submissions:
     repo: ""
     notes: ""
   Tyler Graham:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/tgraham777/website"
+    notes: "Personal webpage.. plus galaxies!!!"
 Jamie Kawahara:
     repo: "https://github.com/androidgrl/appstarter"
     notes: "Appstarter website"
