--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -30,8 +30,8 @@ submissions:
     repo: ""
     notes: ""
   Lev Kravinsky:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/kravinskylev/kravinskylev.github.io"
+    notes: "Lev.io Wow! Such CSS. Much responsiveness."
   Whitney Hiemstra:
     repo: ""
     notes: ""
