--- a/1503/module_2_prep/personal_html_css.yml
+++ b/1503/module_2_prep/personal_html_css.yml
@@ -57,8 +57,8 @@ submissions:
     repo: ""
     notes: ""
   Dave Maurer:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/davemaurer/first-website"
+    notes: "That was fun"
   Tyler Graham:
     repo: ""
     notes: ""
