--- a/1503/module_2_prep/task_manager.yml
+++ b/1503/module_2_prep/task_manager.yml
@@ -21,7 +21,7 @@ submissions:
     repo: ""
     notes: ""
   Justin Holmes:
-    repo: ""
+    repo: "https://github.com/Justin-Holmes/task_manager"
     notes: ""
   Drew Reynolds:
     repo: ""
