--- a/1503/module_2_prep/task_manager.yml
+++ b/1503/module_2_prep/task_manager.yml
@@ -30,8 +30,8 @@ submissions:
     repo: ""
     notes: ""
   Lev Kravinsky:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/kravinskylev/task_manager"
+    notes: "why am I so excited about adding CSS?"
   Whitney Hiemstra:
     repo: ""
     notes: ""
