--- a/1503/module_2_prep/task_manager.yml
+++ b/1503/module_2_prep/task_manager.yml
@@ -6,8 +6,8 @@ submissions:
     repo: "https://github.com/maxtedford/task_manager"
     notes: ""
   Rick Bacci:
-    repo: ""
-    notes: ""
+    repo: "https://github.com/RickBacci/task_manager"
+    notes: "doe rea me fa so la te doe"
   Sally MacNicholas:
     repo: ""
     notes: ""
