--- a/1503/module_2_prep/task_manager.yml
+++ b/1503/module_2_prep/task_manager.yml
@@ -24,7 +24,7 @@ submissions:
     repo: ""
     notes: ""
   Drew Reynolds:
-    repo: ""
+    repo: "https://github.com/NYDrewReynolds/task_manager"
     notes: ""
   Josh Cass:
     repo: ""
