Tyler's task manager

--- a/1503/module_2_prep/task_manager.yml
+++ b/1503/module_2_prep/task_manager.yml
@@ -60,5 +60,5 @@ submissions:
     repo: ""
     notes: ""
   Tyler Graham:
-    repo: ""
+    repo: "https://github.com/tgraham777/task_manager"
     notes: ""
