--- a/1503/module_2_prep/task_manager.yml
+++ b/1503/module_2_prep/task_manager.yml
@@ -9,7 +9,7 @@ submissions:
     repo: ""
     notes: ""
   Sally MacNicholas:
-    repo: ""
+    repo: "https://github.com/sallymacnicholas/task_manager"
     notes: ""
   Vanessa Gomez:
     repo: ""
