--- a/1503/module_2_prep/task_manager.yml
+++ b/1503/module_2_prep/task_manager.yml
@@ -27,7 +27,7 @@ submissions:
     repo: ""
     notes: ""
   Josh Cass:
-    repo: ""
+    repo: "https://github.com/joshcass/task_manager"
     notes: ""
   Lev Kravinsky:
     repo: ""
