--- a/1503/module_2_prep/task_manager.yml
+++ b/1503/module_2_prep/task_manager.yml
@@ -15,7 +15,7 @@ submissions:
     repo: ""
     notes: ""
   Andrew Fink:
-    repo: ""
+    repo: "https://github.com/adfink/task_manager"
     notes: ""
   Morgan Miller:
     repo: ""
