--- a/1503/module_2_prep/task_manager.yml
+++ b/1503/module_2_prep/task_manager.yml
@@ -12,7 +12,7 @@ submissions:
     repo: ""
     notes: ""
   Vanessa Gomez:
-    repo: ""
+    repo: "https://github.com/vanegomez/task_manager"
     notes: ""
   Andrew Fink:
     repo: ""
