--- a/1503/06_mini_project.yml
+++ b/1503/06_mini_project.yml
@@ -54,8 +54,8 @@ submissions:
     repo: 
     notes: 
   Dave Maurer:
-    repo: 
-    notes: 
+    repo: https://github.com/davemaurer/idea_box
+    notes: Not much there yet. WIP.
   Tyler Graham:
     repo: 
     notes: 
