--- a/1503/06_mini_project.yml
+++ b/1503/06_mini_project.yml
@@ -3,7 +3,7 @@ submissions:
     repo: 
     notes: 
   Max Tedford:
-    repo: 
+    repo: https://github.com/maxtedford/ideabox
     notes: 
   Rick Bacci:
     repo: 
@@ -42,7 +42,7 @@ submissions:
     repo: 
     notes: 
   Chelsea Worrel:
-    repo: 
+    repo: https://github.com/maxtedford/ideabox
     notes: 
   Dmitry Vizersky:
     repo: 
