--- a/1503/06_mini_project.yml
+++ b/1503/06_mini_project.yml
@@ -15,7 +15,7 @@ submissions:
     repo: 
     notes: 
   Andrew Fink:
-    repo: 
+    repo: https://github.com/adfink/idea_box
     notes: 
   Morgan Miller:
     repo: 
