--- a/1503/06_mini_project.yml
+++ b/1503/06_mini_project.yml
@@ -27,8 +27,8 @@ submissions:
     repo: 
     notes: 
   Josh Cass:
-    repo: 
-    notes: 
+    repo: https://github.com/joshcass/point_box
+    notes: http://point-box.herokuapp.com
   Lev Kravinsky:
     repo: 
     notes: 
