--- a/1505/module_2_prep/webguesser.yml
+++ b/1505/module_2_prep/webguesser.yml
@@ -27,7 +27,7 @@ submissions:
     repo: 
     notes:    
   Max Millington:
-    repo: 
+    repo: https://github.com/MaxMillington/first_sinatra_exercise
     notes:  
   Justin Pease:
     repo: 
