add Lovisa's repo

--- a/1505/module_2_prep/webguesser.yml
+++ b/1505/module_2_prep/webguesser.yml
@@ -33,7 +33,7 @@ submissions:
     repo: 
     notes:    
   Lovisa Svallingson:
-    repo: 
+    repo: https://github.com/applegrain/web_guesser
     notes:     
   David Shim:
     repo: 
