Add Samson Brock's repo

--- a/1505/module_2_prep/webguesser.yml
+++ b/1505/module_2_prep/webguesser.yml
@@ -18,7 +18,7 @@ submissions:
     repo: 
     notes:   
   Samson Brock:  
-    repo: 
+    repo: https://github.com/imwithsam/web_guesser
     notes:
   Alex Tideman:
     repo: 
