Add Samson Brock's personal_html_css repo

--- a/1505/module_2_prep/personal_html_css.yml
+++ b/1505/module_2_prep/personal_html_css.yml
@@ -18,7 +18,7 @@ submissions:
     repo: 
     notes:   
   Samson Brock:  
-    repo: 
+    repo: https://github.com/imwithsam/personal_html_css
     notes:
   Alex Tideman:
     repo: 
