--- a/1505/module_2_prep/webguesser.yml
+++ b/1505/module_2_prep/webguesser.yml
@@ -36,7 +36,7 @@ submissions:
     repo: 
     notes:     
   David Shim:
-    repo: 
+    repo: https://github.com/dsshim/Web-Guesser
     notes:  
   Drew Conly:  
     repo: 
