--- a/1505/module_2_prep/task_manager.yml
+++ b/1505/module_2_prep/task_manager.yml
@@ -21,7 +21,7 @@ submissions:
     repo: 
     notes:
   Alex Tideman:
-    repo: 
+    repo: https://github.com/Alex-Tideman/task_manager
     notes:    
   Adam Caron:
     repo: 
