--- a/1505/module_2_prep/task_manager.yml
+++ b/1505/module_2_prep/task_manager.yml
@@ -33,7 +33,7 @@ submissions:
     repo: 
     notes:    
   Lovisa Svallingson:
-    repo: 
+    repo: https://github.com/applegrain/task_manager
     notes:     
   David Shim:
     repo: 
