add Lovisa's page

--- a/1505/module_2_prep/personal_html_css.yml
+++ b/1505/module_2_prep/personal_html_css.yml
@@ -33,7 +33,7 @@ submissions:
     repo: 
     notes:    
   Lovisa Svallingson:
-    repo: 
+    repo: http://lovisa.io/
     notes:     
   David Shim:
     repo: 
