--- a/1505/module_2_prep/task_manager.yml
+++ b/1505/module_2_prep/task_manager.yml
@@ -12,7 +12,7 @@ submissions:
     repo: 
     notes:  
   Mitch Ashby: 
-    repo: 
+    repo: https://github.com/mitchashby16/task_manager
     notes:  
   Jai Misra:
     repo: 
