--- a/1505/module_2_prep/personal_html_css.yml
+++ b/1505/module_2_prep/personal_html_css.yml
@@ -24,7 +24,7 @@ submissions:
     repo: 
     notes:    
   Adam Caron:
-    repo: 
+    repo: https://github.com/adamcaron/adamcaron_io
     notes:    
   Max Millington:
     repo: 
