--- a/1505/module_2_prep/personal_html_css.yml
+++ b/1505/module_2_prep/personal_html_css.yml
@@ -1,6 +1,6 @@
 submissions:
   Sebastian Abondano:
-    repo: 
+    repo: https://github.com/sabondano/personal_webpage
     notes:  
   Michael Dorrance:
     repo: 
