--- a/1505/module_2_prep/webguesser.yml
+++ b/1505/module_2_prep/webguesser.yml
@@ -45,5 +45,5 @@ submissions:
     repo: 
     notes:   
   Mike Reeves:
-    repo: 
-    notes:  
+    repo: https://github.com/michael-reeves/web_guesser
+    notes:  Added all extensions
