--- a/1505/module_2_prep/webguesser.yml
+++ b/1505/module_2_prep/webguesser.yml
@@ -24,7 +24,7 @@ submissions:
     repo: 
     notes:    
   Adam Caron:
-    repo: 
+    repo:  https://github.com/adamcaron/web_guesser
     notes:    
   Max Millington:
     repo: https://github.com/MaxMillington/first_sinatra_exercise
