--- a/1505/module_2_prep/webguesser.yml
+++ b/1505/module_2_prep/webguesser.yml
@@ -9,7 +9,7 @@ submissions:
     repo: 
     notes:  
   Marla Brizel:  
-    repo: 
+    repo: https://github.com/marlabrizel/web_guesser
     notes:  
   Mitch Ashby: 
     repo: 
