--- a/1505/module_2_prep/webguesser.yml
+++ b/1505/module_2_prep/webguesser.yml
@@ -5,8 +5,8 @@ submissions:
   Michael Dorrance:
     repo: 
     notes:    
-  Jason Wright:
-    repo: 
+  Jason Wright: 
+    repo: https://github.com/noobjey/web_guesser
     notes:  
   Marla Brizel:  
     repo: https://github.com/marlabrizel/web_guesser
