--- a/1505/module_2_prep/task_manager.yml
+++ b/1505/module_2_prep/task_manager.yml
@@ -1,6 +1,6 @@
 submissions:
   Sebastian Abondano:
-    repo: 
+    repo: https://github.com/sabondano/task_manager
     notes:  
   Michael Dorrance:
     repo: 
