--- a/1505/module_2_prep/personal_html_css.yml
+++ b/1505/module_2_prep/personal_html_css.yml
@@ -6,8 +6,8 @@ submissions:
     repo: 
     notes:    
   Jason Wright:
-    repo: 
-    notes:  
+    repo:  https://github.com/noobjey/noobjey.github.io
+    notes: http://noobjey.github.io
   Marla Brizel:  
     repo: https://github.com/marlabrizel/personal
     notes:  
