--- a/1505/module_2_prep/personal_html_css.yml
+++ b/1505/module_2_prep/personal_html_css.yml
@@ -3,7 +3,7 @@ submissions:
     repo: https://github.com/sabondano/personal_webpage
     notes:  
   Michael Dorrance:
-    repo: 
+    repo: https://github.com/mdorrance/personal_webpage
     notes:    
   Jason Wright:
     repo: 
