--- a/1505/module_2_prep/personal_html_css.yml
+++ b/1505/module_2_prep/personal_html_css.yml
@@ -14,8 +14,8 @@ submissions:
   Mitch Ashby: 
     repo: 
     notes:  
-  Jai Misra:
-    repo: 
+  Jai Misra: 
+    repo: https://github.com/mrjaimisra/website
     notes:   
   Samson Brock:  
     repo: https://github.com/imwithsam/personal_html_css
