--- a/1505/module_2_prep/task_manager.yml
+++ b/1505/module_2_prep/task_manager.yml
@@ -27,7 +27,7 @@ submissions:
     repo: 
     notes:    
   Max Millington:
-    repo: 
+    repo: https://github.com/MaxMillington/task_manager
     notes:  
   Justin Pease:
     repo: 
