--- a/1505/module_2_prep/personal_html_css.yml
+++ b/1505/module_2_prep/personal_html_css.yml
@@ -39,7 +39,7 @@ submissions:
     repo: https://github.com/dsshim/Personal_Website
     notes:  http://shim.city
   Drew Conly:  
-    repo: 
+    repo: https://github.com/Drew242/personal_website
     notes: 
   Justin Holzmann:
     repo: 
