--- a/1505/module_2_prep/task_manager.yml
+++ b/1505/module_2_prep/task_manager.yml
@@ -39,7 +39,7 @@ submissions:
     repo: https://github.com/dsshim/Task-Manager
     notes:  
   Drew Conly:  
-    repo: 
+    repo: https://github.com/Drew242/task_manager
     notes: 
   Justin Holzmann:
     repo: 
