--- a/1505/module_2_prep/task_manager.yml
+++ b/1505/module_2_prep/task_manager.yml
@@ -3,7 +3,7 @@ submissions:
     repo: https://github.com/sabondano/task_manager
     notes:  
   Michael Dorrance:
-    repo: 
+    repo: https://github.com/mdorrance/task_manager
     notes:    
   Jason Wright:
     repo: 
