--- a/1505/module_2_prep/personal_html_css.yml
+++ b/1505/module_2_prep/personal_html_css.yml
@@ -12,8 +12,8 @@ submissions:
     repo: https://github.com/marlabrizel/personal
     notes:  
   Mitch Ashby: 
-    repo: 
-    notes:  
+    repo: https://github.com/mitchashby16/personal_website/tree/gh-pages
+    notes:  mitchashby.me
   Jai Misra: 
     repo: https://github.com/mrjaimisra/website
     notes:   
