--- a/1505/module_2_prep/task_manager.yml
+++ b/1505/module_2_prep/task_manager.yml
@@ -45,5 +45,5 @@ submissions:
     repo: 
     notes:   
   Mike Reeves:
-    repo: 
+    repo: https://github.com/michael-reeves/task_manager
     notes:  
