Adds Adam's task_manager repo

--- a/1505/module_2_prep/task_manager.yml
+++ b/1505/module_2_prep/task_manager.yml
@@ -24,7 +24,7 @@ submissions:
     repo: https://github.com/Alex-Tideman/task_manager
     notes:    
   Adam Caron:
-    repo: 
+    repo: https://github.com/adamcaron/task_manager
     notes:    
   Max Millington:
     repo: https://github.com/MaxMillington/task_manager
