--- a/1505/module_2_prep/task_manager.yml
+++ b/1505/module_2_prep/task_manager.yml
@@ -15,7 +15,7 @@ submissions:
     repo: https://github.com/mitchashby16/task_manager
     notes:  
   Jai Misra:
-    repo: 
+    repo: https://github.com/mrjaimisra/task_manager
     notes:   
   Samson Brock:  
     repo: https://github.com/imwithsam/task_manager
